# AridWigglyTransformations

./: 2nd_October.ipynb  3rd_October.ipynb  Phase_1_2_6.ipynb  Phase_1_2_6_(1).ipynb  Phase_1_6.ipynb  RAG Guide  crawl4ai_quickstart.ipynb  main.py  pyproject.toml  replit.nix  requirements.txt
